# chapel2

./: .gitignore  .python-version  CUBOID_STRUT_GEOMETRY.md  DESIGN_REFERENCE.md  README.md  pyproject.toml
notebooks/: chapel.ipynb  dome_test.ipynb  example.ipynb  hub_comparison.ipynb
output/: .gitkeep
src/chapel2/: __init__.py  analysis.py  cuboid_struts.py  dome_generator.py  geometry.py  hubs.py  miter_struts.py  visualization.py  wedged_struts.py
